<resources>
    <string name="app_name">Olympic Games Quiz</string>
    <string name="question1">Question 1:</string>
    <string name="question2">Question 2:</string>
    <string name="question3">Question 3:</string>
    <string name="question4">Question 4:</string>
    <string name="question5">Question 5:</string>
    <string name="question6">Question 6:</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="your_answer_here">Your answer here</string>
    <string name="summer_olympics">Summer Olympics</string>
    <string name="winter_olympics">Winter Olympics</string>
    <string name="question_label">Question</string>
    <string name="question_value">Question...</string>
    <string name="answer_1_radio">answer 1</string>
    <string name="answer_2_radio">answer 2</string>
    <string name="answer_3_radio">answer 3</string>
    <string name="answer_4_radio">answer 4</string>
    <string name="answer_5_radio">answer 5</string>
    <string name="answer_1_check">answer 1</string>
    <string name="answer_2_check">answer 2</string>
    <string name="answer_3_check">answer 3</string>
    <string name="answer_4_check">answer 4</string>
    <string name="answer_5_check">answer 5</string>
    <string name="summer_olympics_on_results">Summer Olympics</string>
    <string name="quiz_results">Quiz Results Summary</string>
    <string name="your_quiz_score_is">Your quiz score is:</string>
    <string name="your_score_value">5 out of 5</string>
    <string name="correct_answers_label">Questions answered correctly:</string>
    <string name="correct_answers_value">All</string>
    <string name="incorrect_answers_label">Questions answered incorrectly:</string>
    <string name="incorrect_answers_value">None</string>
    <string name="winter_olympics_on_results">Winter Olympics</string>
    <string name="title_activity_summer_olympics_q6">SummerOlympicsQ6</string>
</resources>
