<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_start_page_bg"
    tools:context=".WinterOlympicsQuizResults">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/olympic_circles"
            android:src="@drawable/olympic_circles"
            style="@style/olympic_circles_on_results" />

        <TextView
            android:id="@+id/winter_olympics_on_results"
            android:text="@string/winter_olympics_on_results"
            style="@style/winter_olympics_on_results" />

        <TextView
            android:id="@+id/quiz_results"
            android:text="@string/quiz_results"
            style="@style/quiz_results" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/quiz_results"
                style="@style/quiz_results_img" />

            <TextView
                android:id="@+id/your_score_label"
                android:text="@string/your_quiz_score_is"
                style="@style/your_score_label" />

            <TextView
                android:id="@+id/your_score_value"
                android:text="@string/your_score_value"
                style="@style/your_score_value" />

            <TextView
                android:id="@+id/correct_answers_label"
                android:text="@string/correct_answers_label"
                style="@style/correct_answers_label" />

            <TextView
                android:id="@+id/correct_answers_value"
                android:text="@string/correct_answers_value"
                style="@style/correct_answers_value" />

            <TextView
                android:id="@+id/incorrect_answers_label"
                android:text="@string/incorrect_answers_label"
                style="@style/incorrect_answers_label" />

            <TextView
                android:id="@+id/incorrect_answers_value"
                android:text="@string/incorrect_answers_value"
                style="@style/incorrect_answers_value" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/restart_quiz"
            android:src="@drawable/restart_quiz"
            style="@style/restart_quiz" />

    </LinearLayout>

</ScrollView>